Maintenenance - clean up unused cache files and update references to NTG Central

--- a/_variables.scss
+++ b/_variables.scss
@@ -97,7 +97,7 @@ $typography-sizing-line-height-body-sm: 20px;
 $typography-sizing-line-height-body-md: 24px;
 $typography-sizing-line-height-body-lg: 28px;
 
-// NT.GOV.AU Brand
+// NTG Central Brand
 // -----------------------------------------------------------------------------
 
 // Brand Colours
