--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,4 @@
-// NT.GOV.AU Bootstrap Theme
+// NTG Central Bootstrap Theme
 // Main theme entry point
 
 // Import design tokens and CSS custom properties
@@ -28,7 +28,7 @@ h6 {
   color: var(--bs-headings-color);
 }
 
-// Utility class enhancements for NT.GOV.AU brand colors
+// Utility class enhancements for NTG Central brand colors
 .text-nt-primary {
   color: var(--bs-primary) !important;
 }
