--- a/_root.scss
+++ b/_root.scss
@@ -1,5 +1,5 @@
 // CSS Custom Properties mapping for Bootstrap 5.3+ theming
-// Maps NT.GOV.AU design tokens to Bootstrap CSS custom properties
+// Maps NTG Central design tokens to Bootstrap CSS custom properties
 
 @use "variables" as *;
 
